--- a/resume/src/app/navbar/navbar.component.html
+++ b/resume/src/app/navbar/navbar.component.html
@@ -1,14 +1,14 @@
-<mat-toolbar>
-    <button mat-icon-button class="terminal-icon" aria-label="terminal-icon">
-      <mat-icon>terminal</mat-icon>
-    </button>
-    <span>Guido Nicolini</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="mail-icon" aria-label="mail-icon">
-      <mat-icon>mail</mat-icon>
-    </button>
-    <button mat-icon-button class="share-icon" aria-label="share-icon">
-      <mat-icon>share_reviews</mat-icon>
-    </button>
-  </mat-toolbar>
-  
+<div class="container">
+
+    <div class="logo">
+        <h1>Guido Nicolini</h1>
+    </div>
+
+    <div class="secciones">
+        <ul>
+            <li>Proyectos</li>
+            <li>Contacto</li>
+        </ul>
+    </div>
+
+</div>
