--- a/resume/src/app/app.component.html
+++ b/resume/src/app/app.component.html
@@ -1,3 +1,1 @@
-<div class="app-navbar"><app-navbar/></div>
-<div class="app-side-menu"><app-side-menu/></div>
-<div class="router"><router-outlet/></div>
+<router-outlet/>
