--- a/resume/src/app/main-page/main-page.component.html
+++ b/resume/src/app/main-page/main-page.component.html
@@ -1,1 +1,7 @@
-<p>main-page works!</p>
+<div class="container">
+
+    <div class="navbar"> <app-navbar></app-navbar> </div>
+    <div class="router-main"> <router-outlet/> </div>
+    <div class="footer"> <app-footer></app-footer></div>
+
+</div>
